--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       // TODO: replace with your Google Analytics profile ID.
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
-    </script> -->
+    </script>
+    <script src="http://www.google-analytics.com/analytics.js"></script> -->
 
-    <script src="http://www.google-analytics.com/analytics.js"></script>
     <script async src="js/perfmatters.js"></script>
   </head>
 
