--- a/index.html
+++ b/index.html
@@ -13,16 +13,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/print.css" rel="stylesheet">
 
-    <!-- removing google analytics script - we don't need it
-    <script>
-      (function(w,g){w['GoogleAnalyticsObject']=g;
-      w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
-
-      // TODO: replace with your Google Analytics profile ID.
-      ga('create', 'UA-XXXX-Y');
-      ga('send', 'pageview');
-    </script>
-    <script src="http://www.google-analytics.com/analytics.js"></script> -->
+    <!-- Note: removed google analytics script - we don't need it -->
 
     <script async src="js/perfmatters.js"></script>
   </head>
