Forgot to take out the original link to style.css!

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </style>
 
 
-    <link href="css/style.css" rel="stylesheet">
+    <!-- added a media query so this link won't block rendering for screen -->
     <link href="css/print.css" rel="stylesheet" media="print">
 
     <!-- Note: removed google analytics script - we don't need it -->
