--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="author" content="Keith Thomson">
     <title>Cameron Pittman: Portfolio</title>
 
-    <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+    <!-- Removed the web font Open Sans, no need to use it -->
 
     <!-- inline those parts of the main css that are used on index.html - we will load the whole css file asynchronously in javascript later -->
     <style>
@@ -20,7 +19,7 @@
         -webkit-text-size-adjust: none;
       }
       body { margin: 0; font-size: 14px; line-height: 1.61; font-weight: 400; }
-      body, button, input, select, textarea { font-family: 'Open Sans', sans-serif; color: #333; }
+      body, button, input, select, textarea { font-family: 'Arial, sans-serif; color: #333; }
 
       b, strong { font-weight: bold; }
       ul, ol { margin: 1em 0; padding: 0 0 0 20px; }
@@ -56,7 +55,6 @@
         header p { padding-left: 4.5em;}
       }
     </style>
-
 
     <!-- added a media query so this link won't block rendering for screen -->
     <link href="css/print.css" rel="stylesheet" media="print">
