Update README to prepare for submission

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
       }
     </style>
 
-    <!-- added a media query so this link won't block rendering for screen -->
+    <!-- optimization: added a media query so this link won't block rendering for screen -->
     <link href="css/print.css" rel="stylesheet" media="print">
 
-    <!-- Note: removed google analytics script - we don't need it -->
+    <!-- optimization: removed google analytics script - we don't need it -->
 
     <script async src="js/perfmatters.js"></script>
   </head>
